manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample
  name: sample
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sample
